; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/regedit/extr_regproc.c_GetMultiByteString.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/regedit/extr_regproc.c_GetMultiByteString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @GetMultiByteString(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %23

8:                                                ; preds = %1
  %9 = load i32, i32* @CP_ACP, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @WideCharToMultiByte(i32 %9, i32 0, i32* %10, i32 -1, i8* null, i32 0, i32* null, i32* null)
  store i32 %11, i32* %5, align 4
  %12 = call i32 (...) @GetProcessHeap()
  %13 = load i32, i32* %5, align 4
  %14 = call i8* @HeapAlloc(i32 %12, i32 0, i32 %13)
  store i8* %14, i8** %4, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @CHECK_ENOUGH_MEMORY(i8* %15)
  %17 = load i32, i32* @CP_ACP, align 4
  %18 = load i32*, i32** %3, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @WideCharToMultiByte(i32 %17, i32 0, i32* %18, i32 -1, i8* %19, i32 %20, i32* null, i32* null)
  %22 = load i8*, i8** %4, align 8
  store i8* %22, i8** %2, align 8
  br label %24

23:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %24

24:                                               ; preds = %23, %8
  %25 = load i8*, i8** %2, align 8
  ret i8* %25
}

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32*, i32, i8*, i32, i32*, i32*) #1

declare dso_local i8* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @CHECK_ENOUGH_MEMORY(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
